<resources>
    <string name="app_name">Literature sharing for VI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="upload_your_blindness_certificate">Upload your blindness certificate</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_current_pin">Enter current PIN</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="loading">Loading...</string>
    <string name="share_facebook">facebook</string>
    <string name="share_sms">sms</string>
    <string name="share_twitter">twitter</string>
    <string name="share_email_gmail">email gmail</string>
    <string name="share_email_subject">subject</string>
    <string name="share_chooser_text">choose</string>
    <string name="share_email_native">native emial</string>
    <string name="share_mxplayer">mxplayer</string>
    <string name="download_ticker">Downloading</string>
    <string name="content_title">literature sharing</string>

    <string-array name="dd">
        <item>DD</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="mm">
        <item>MM</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
